--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-first-history": "^4.5.0",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -56,6 +57,7 @@
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.1.8",
     "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0"
+    "@types/redux-thunk": "^2.1.0",
+    "@types/styled-components": "^5.1.14"
   }
 }
