--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
